<?xml version="1.0"?>
<package format="2">
  <name>eva_security</name>
  <version>1.0.0</version>
  <description>The eva_security package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bilgi@inovasyonmuhendislik.com">İnovasyon Muhendislik</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>eva_security_description</exec_depend>
  <exec_depend>eva_security_simulation</exec_depend>
  <export><metapackage/></export>
  
</package>
